[package]
name = "tarssh"
version = "0.5.0"
description = "A simple SSH tarpit server"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Freaky/tarssh"
documentation  ="https://docs.rs/tarssh"
keywords = ["ssh", "tarpit", "security", "server"]
readme = "README.md"

[features]
default = ["sandbox", "drop_privs"]
sandbox = ["rusty-sandbox"]
drop_privs = ["privdrop"]

[dependencies]
env_logger = "0.8"
exitcode = "1.1.2"
futures = "0.3.4"
futures-util = "0.3.4"
log = "0.4.8"
structopt = "0.3.11"
tokio = { version = "0.3", features = ["io-util", "net", "rt-multi-thread", "signal", "sync", "time"] }

[target."cfg(unix)".dependencies]
rusty-sandbox = { version = "0.2", optional = true }
privdrop = { version = "0.5", optional = true }
