[package]
name = "tarssh"
version = "0.6.0"
description = "A simple SSH tarpit server"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Freaky/tarssh"
documentation  ="https://docs.rs/tarssh"
keywords = ["ssh", "tarpit", "security", "server"]
readme = "README.md"

[features]
default = ["sandbox", "drop_privs"]
sandbox = ["rusty-sandbox"]
drop_privs = ["privdrop"]

[dependencies]
env_logger = "0.9"
exitcode = "1.1"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
structopt = "0.3"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.1", features = ["net", "time"] }
async-stream = "0.3.0"

[target."cfg(unix)".dependencies]
rusty-sandbox = { version = "0.2", optional = true }
privdrop = { version = "0.5", optional = true }

[dev-dependencies]
quickcheck = "1.0"
